{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 246,
  "lineage": "c8c09275-e0c3-3f43-766f-d6c4c0859626",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ingress",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.187.165.48",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-01T18:27:54.825-08:00",
            "id": "projects/ip2-devops4-480317/regions/europe-west1/addresses/bordspel-ingress-ip-team12",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "bordspel-ingress-ip-team12",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ip2-devops4-480317",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/regions/europe-west1/addresses/bordspel-ingress-ip-team12"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-01T18:28:08.097-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-http-https-team12",
            "log_config": [],
            "name": "allow-http-https-team12",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team12",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-http-https-team12",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-01-01T18:28:08.143-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-internal-team12",
            "log_config": [],
            "name": "allow-internal-team12",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team12",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-internal-team12",
            "source_ranges": [
              "10.0.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-01T18:28:08.843-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-ssh-team12",
            "log_config": [],
            "name": "allow-ssh-team12",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team12",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-ssh-team12",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ip2-devops4-480317/global/networks/bordspel-network-team12",
            "mtu": 0,
            "name": "bordspel-network-team12",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4714088689074607045",
            "project": "ip2-devops4-480317",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team12"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-01T18:28:08.355-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/ip2-devops4-480317/regions/europe-west1/subnetworks/bordspel-subnet-team12",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "bordspel-subnet-team12",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team12",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ip2-devops4-480317",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.244.0.0/14",
                "range_name": "gke-bordspel-platform-team12-pods-81fb9e38"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/regions/europe-west1/subnetworks/bordspel-subnet-team12",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}